reject a pkg
