# softwarepkg/controller/software_pkg.go
@@ -25,7 +25,7 @@ func AddRouteForSoftwarePkgController(r *gin.RouterGroup, pkgService app.Softwar
 	r.PUT("/v1/softwarepkg/:id", m, ctl.UpdateApplication)
 
 	r.POST("/v1/softwarepkg/:id/review", m, ctl.Review)
-	r.PUT("/v1/softwarepkg/:id/review/reject", m, ctl.Reject)
+	r.PUT("/v1/softwarepkg/:id/reject", m, ctl.Reject)
 	r.PUT("/v1/softwarepkg/:id/review/abandon", m, ctl.Abandon)
 	r.PUT("/v1/softwarepkg/:id/review/rerunci", m, ctl.RerunCI)
 	r.POST("/v1/softwarepkg/:id/review/comment", m, ctl.NewReviewComment)
@@ -167,7 +167,7 @@ func (ctl SoftwarePkgController) Review(ctx *gin.Context) {
 // @Param	id  path	 string	 true	"id of software package"
 // @Success 202 {object} ResponseData
 // @Failure 400 {object} ResponseData
-// @Router /v1/softwarepkg/{id}/review/reject [put]
+// @Router /v1/softwarepkg/{id}/reject [put]
 func (ctl SoftwarePkgController) Reject(ctx *gin.Context) {
 	user, err := middleware.UserChecking().FetchUser(ctx)
 	if err != nil {
@@ -176,8 +176,8 @@ func (ctl SoftwarePkgController) Reject(ctx *gin.Context) {
 		return
 	}
 
-	if code, err := ctl.service.Reject(ctx.Param("id"), &user); err != nil {
-		commonctl.SendFailedResp(ctx, code, err)
+	if err := ctl.service.Reject(ctx.Param("id"), &user); err != nil {
+		commonctl.SendError(ctx, err)
 	} else {
 		commonctl.SendRespOfPut(ctx)
 	}
